# ai-project-dashboard

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: sample_projects.yaml
src/: __init__.py  analytics.py  app.py  database.py  models.py  report_generator.py
tests/: test_analytics.py  test_database.py  test_models.py
